--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "result": "node result.js"
+    "result": "node index.js"
   }
 }
